<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jemmy.calak.camart.view.finish">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/terima_kasih_telah_berbelanja_di_camart"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/pesanan_anda_dalam_proses_verifikasi_pembayaran" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp">
                <TextView
                    android:id="@+id/tfinis1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/silahkan_transfer_ke" />

                <LinearLayout
                    android:layout_below="@+id/tfinis1"
                    android:id="@+id/layoutfinis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tfinis2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_rekening" />

                    <TextView
                        android:id="@+id/tfinis3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_n" />

                    <TextView
                        android:id="@+id/tfinis4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dengan_nominal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@+id/tfinis1"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/layoutfinis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/norekFinis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/atasnamaFinis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/nominalFinis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Jika ada pertanyaan anda dapat menghubungi kami di +6282269219485" />
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <Button
        android:id="@+id/finisBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/colorPrimaryDark"
        android:text="Finish"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</android.support.design.widget.CoordinatorLayout>
